# aisem23

./: README.md  script.docx
Chemical_Data_Science/: Intro to Chemical Data Science.ipynb  environment.yml
Chemical_Data_Science/data/: chemblKi.yaml
Intro_to_Machine_Learning/: Machine Learning Intro.ipynb  environment.yml
Pipelines/: GettingStarted.ipynb  README.md  getting_started.ipynb  ligand_screening.ipynb  ligand_screening_sol.ipynb  structure_based_screening.ipynb
Pipelines/data/: EGFR_knownInh.csv  filtered_compounds.csv  test_compounds_EGFR.csv
Reaction_Language_Modelling/: README.MD
Structure-based_Design/script_examples/Exercise_1/1.1/: fragment2_Mpro-x0107_refine.mtz
Structure-based_Design/script_examples/Exercise_1/1.2/: Mpro-X0107_unhappy_waters.pse
Structure-based_Design/script_examples/Exercise_1/1.3/: fragment2.1_Mpro-x11612_0A_2fofc.map  fragment2.1_Mpro-x11612_0A_fofc.map
Structure-based_Design/script_examples/Exercise_1/1.4/: Mpro_docking_poses.pse
day_1_syngenta/01_intro/: 01_ide_plot_.py  lint_after.py  lint_before.py  pep8_after.py  pep8_before.py
day_1_syngenta/02_ide/: .gitignore  README.rst  description.txt  pyproject.toml  requirements.txt  setup.py
day_1_syngenta/02_ide/src/aisem23_code_snippets/: __init__.py  after_flake8.py  before_flake8.py  cheminf_utils.py  ide_features.py  ide_to_the_rescue.py  ide_to_the_rescue_after.py  try_walrus.py
day_1_syngenta/03_testing/: examples.py
day_1_syngenta/03_testing/project/: summer.py  test_summer.py
(+3 files in other folders)
